core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/mapkey.yf
---
name: echo-composition
graphs:
  start:
    - type: EchoNode
      put: A
      value: {ok: "1"}

    - type: EchoNode
      put: B
      value: ["{A}"]

    - type: StringContainsNode
      regex: "notimportant"
      content: "{{{B}}[0]@ok}" # content :: String

