core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapkey.yf
---
name: echo-composition
graphs:
  start:
    - type: Echo
      put: A
      value: {ok: "1"}

    - type: Echo
      put: B
      value: ["{A}"]

    - type: StringContains
      regex: "notimportant"
      content: "{{B}@ok}" # content :: String

